    ADDED: KrSearch edit/view file in the result list window (F3, F4, right click)
    ADDED: a folder-history button, a-la-total commander. thanks to Hans Loffler!
    ADDED: selectall at rename
    ADDED: new shortcuts to search dialog (heiner)
    ADDED: directory synchronizer
    ADDED: file splitter
    ADDED: a missing credit for Frank in the about box
    FIXED: KDE 3.2 terminal exit at Ctrl+C
    FIXED: bug [ 906386 ] regarding refreshes of dirwatch with fam enabled
    FIXED: bug [ 906538 ] which now makes a faster unpacking process
    FIXED: bug [ 894771 ] regarding over-expanding window due to long command line
    FIXED: edit new file on KDE 3.2
    FIXED: permission handling for FTP URL-s
    FIXED: calc space crash at vfs refresh (thanks to Heiner)
    FIXED: krarc created non-executable directories (0666)
    FIXED: reimplementing the 'allow move into archive' setting
    FIXED: no restart at changing the icon tray's state in konfigurator
    FIXED: krusader freezes if the `df` process does not terminate (at network errors, IO wait)
    FIXED: krusaderui.rc bug, new menuitems does not appear after a krusader update
    FIXED: sort by EXT did not obey the 'case sensative sort' flag
    FIXED: 2 items on the view menu had the same shortcuts
    FIXED: increased speed of search, by emitting lesssignals (thanks to Lars)
    FIXED: statusbar updated only on mouse clicks, not on keyboard
    FIXED: translation: forcing non-english languages with a strange structure
    FIXED: freeze at modal dialogs and icon tray
    FIXED: crash at rename if the directory is refreshed by the watcher
    FIXED: stepping to the file below after delete (heiner)
    FIXED: window size and position saving at maximized mode
    FIXED: more freedom to give FTP proxy URL-s in "New FTP Connection" menu
    FIXED: crash at ftp://user@server@proxy:port FTP URL-s
    FIXED: no parent directory at tar://... and zip://... URL-s