@@ -24,6 +24,7 @@
     ADDED: directory synchronizer
     ADDED: file splitter
     ADDED: a missing credit for Frank in the about box
+    FIXED: krusader exits at closing the viewer when minimized to tray
     FIXED: KDE 3.2 terminal exit at Ctrl+C
     FIXED: bug [ 906386 ] regarding refreshes of dirwatch with fam enabled
     FIXED: bug [ 906538 ] which now makes a faster unpacking process
